# AVXPathTracer

./: CMakeLists.txt  LICENSE
cmake/: StbConfig.cmake
include/: Collision.hpp  Definitions.hpp  Math.hpp
source/: Main.cpp
